# rapididentity-tools

./: .gitignore  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  config.example.json  env.example  pyproject.toml  setup.py  swagger.json
examples/: README.md  actiondef_to_script.py  archive_action_history.py  connect_file_utils.py  get_actions.py  get_adapters.py  get_connect_endpoint.py  inspect_swagger.py  put_action.py  sync_files.sh
rapididentity/: __init__.py  auth.py  client.py  config.py  connect.py  exceptions.py
rapididentity/utils/: __init__.py  actiondefs.py  helpers.py  parsers.py  validators.py
tests/: check_credentials.py  test_client.py  test_connect_file_utils.py  test_get_actions.py  test_syntax.py
